refactored game structure to transition from Advent Calendar to Daily Word Puzzle format, updated SEO metadata, improved hint and solution handling, and added new puzzle data for enhanced gameplay experience

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tile-sum",
   "version": "1.0.0",
-  "description": "Advent Puzzle Calendar - Daily word puzzle game",
+  "description": "Daily word puzzle game - Scrabble anagram challenges",
   "scripts": {
     "build:css": "postcss src/styles.css -o styles.css",
     "watch:css": "postcss src/styles.css -o styles.css --watch",
