--- a/package.json
+++ b/package.json
@@ -8,13 +8,25 @@
     "build:data": "node scripts/encode-puzzle-data.js",
     "build:all": "npm run build:css && npm run build:data",
     "update-rules": "node scripts/update-cursor-rules.js",
-    "validate-rules": "node scripts/update-cursor-rules.js"
+    "validate-rules": "node scripts/update-cursor-rules.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:all": "npm run test && npm run test:e2e"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.0",
+    "@testing-library/dom": "^10.4.0",
+    "@vitest/coverage-v8": "^2.1.9",
+    "@vitest/ui": "^2.1.8",
     "autoprefixer": "^10.4.20",
+    "jsdom": "^25.0.1",
     "postcss": "^8.4.47",
     "postcss-cli": "^11.0.0",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "vitest": "^2.1.8"
   }
 }
-
