--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tile-sum",
   "version": "1.0.0",
   "description": "Daily word puzzle game - Scrabble anagram challenges",
+  "type": "module",
   "scripts": {
     "build:css": "postcss src/styles.css -o styles.css",
     "watch:css": "postcss src/styles.css -o styles.css --watch",
@@ -9,6 +10,10 @@
     "build:all": "npm run build:css && npm run build:data",
     "update-rules": "node scripts/update-cursor-rules.js",
     "validate-rules": "node scripts/update-cursor-rules.js",
+    "validate:anagrams": "node scripts/validation/check-anagrams.js",
+    "validate:scores": "node scripts/validation/check-scores.js",
+    "fix:scores": "node scripts/validation/fix-duplicate-scores.js",
+    "apply:scores": "node scripts/validation/apply-score-replacements.js",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
