Enhance validation scripts and puzzle data management
- Added new validation scripts in package.json for checking alternative solutions, removing alternative puzzles, and generating puzzles, improving game integrity and variety.
- Updated puzzle-data.js to modify existing word pairs and solutions, enhancing gameplay.
- Refactored validation scripts to utilize a local word dictionary, replacing the previous GitHub dependency, and ensuring better control over word validation.
- Removed obsolete scripts related to score replacements and anagram finding, streamlining the validation process.
- Improved E2E tests to ensure reliable navigation and loading of puzzle components.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "validate-rules": "node scripts/update-cursor-rules.js",
     "validate:anagrams": "node scripts/validation/check-anagrams.js",
     "validate:scores": "node scripts/validation/check-scores.js",
+    "validate:alternatives": "node scripts/validation/check-alternative-solutions.js",
+    "remove:alternatives": "node scripts/validation/remove-alternative-puzzles.js",
+    "generate:puzzles": "node scripts/validation/generate-puzzles.js",
     "fix:scores": "node scripts/validation/fix-duplicate-scores.js",
     "apply:scores": "node scripts/validation/apply-score-replacements.js",
     "test": "vitest run",
