--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
+    "test:a11y": "lsof -ti:8000 | xargs kill -9 || true && playwright test tests/e2e/accessibility.spec.js",
     "test:all": "npm run test && npm run test:e2e"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.0",
     "@playwright/test": "^1.48.0",
     "@testing-library/dom": "^10.4.0",
     "@vitest/coverage-v8": "^2.1.9",
