Enhance UI consistency and accessibility across pages
- Updated button styles in archive.html, index.html, and puzzle.html to improve visual consistency, changing background colors and hover states for better user experience.
- Enhanced accessibility by adding aria-describedby attributes to modals and ensuring proper feedback for disabled buttons in the hint system.
- Improved E2E tests for accessibility and hint functionality, ensuring robust coverage and reliable user interactions across the application.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "test:e2e": "playwright test",
+    "test:e2e": "lsof -ti:8000 | xargs kill -9 || true && playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:a11y": "lsof -ti:8000 | xargs kill -9 || true && playwright test tests/e2e/accessibility.spec.js",
     "test:all": "npm run test && npm run test:e2e",
