--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.13",
     "vitest": "^4.0.17"
+  },
+  "dependencies": {
+    "wink-pos-tagger": "^2.2.2"
   }
 }
